tests/parser/should_fail/T20609b.stderr

T20609b.hs:7:3: error: [GHC-58481] parse error on input ‘forall’
